--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+/* Estilos globales para el cuerpo de la aplicación. */
+body {
+  background-image: url('assets/wallpaper.png');            /* Define una imagen de fondo para la aplicación. */
+  background-size: cover;                                   /* Ajusta la imagen de fondo para cubrir toda la pantalla. */
+  background-position: center;                              /* Centra la imagen de fondo. */
+  background-repeat: no-repeat;                             /* Evita que la imagen de fondo se repita. */
+  height: 100vh;                                            /* Establece la altura del cuerpo al 100% del viewport (ventana del navegador). */
+  margin: 0;                                                /* Elimina el margen predeterminado del cuerpo. */
+  font-style: oblique;                                      /* Aplica un estilo de fuente oblicua (cursiva) al texto. */
+}
